# safe-url-checker

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
safe_url_checker/: __init__.py  main.py
safe_url_checker/integrations/: __init__.py  base_integration.py  google_safe_base.py  google_safe_interstitial.py  google_safe_transparency.py  virustotal.py
tests/: test_check.py  test_get_integration.py  test_get_integrations_list.py  test_set_integration_params.py  test_set_integrations.py
