[tool.poetry]
name = "safe-url-checker"
version = "1.0.1"
description = "A library for checking links for security using several different integrations."
authors = ["Aleksei Kovalenko <kalexhaym@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "safe_url_checker"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pylint = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
